# distributed-systems-art

./: .gitignore  .gitignore_generator  README.md  art-gen.cabal  art-gen.nix  flake.nix  generator.cabal  generator.nix  kernels.nix  make.rb
generator/: Backend.hs  Lib.hs  Main.hs  MessagePassing.hs  PartialOrder.hs  SharedMemory.hs
notebooks/: Diagrams.ipynb
